# my_messenger

./: .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.test  README.md  compose_dev.sh  compose_tests.sh  dev.env  docker-compose.dev.yml  docker-compose.test.yml  example.env  fake_data.json  pyproject.toml  setup.cfg
app/: main.py
app/api/v1/: history.py  websocket.py
app/api/v1/dependencies/: container.py  logger.py  repos.py  services.py  session.py
app/commands/: fake_data_command.py
app/constants/: base.py
app/containers/: messaging_exception_handlers.py  web_socket.py
app/core/: logger.py  settings.py
app/db/: declarative_base.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 6ad9f5ddbf6c_init.py  8debf209aaf5_add_cascade.py  a55287a14390_add_created_at_to_chat_members.py
app/db/models/: base.py  chats.py  groups.py  messages.py  users.py
app/db/repositories/: abc.py  chats.py  group.py  messages.py  users.py
app/exc/: base.py
app/schema/: base.py  chat.py  chat_message.py  group.py  history.py  messaging.py  user.py
app/services/: abc.py  auth.py  group.py  history.py  messaging.py  password_hashing.py
app/services/messaging_exception_handlers/: abc.py  base.py
app/type/: base.py
docs/: models.puml
scripts/: format.sh  lint.sh  start.sh  start_fake.sh  test.sh
tests/: conftest.py  types.py
tests/api/: conftest.py  test_history.py  test_websocket.py
