[project]
name = "my-messenger"
version = "0.1.0"
description = "Sample code for a small API that can run a whole messenger"
authors = [
    {name = "Vadim Goncharov",email = "psinahoi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
