[project]
name = "my-messenger"
version = "0.2.0"
description = "Sample code for a small API that can run a whole messenger"
authors = [
    {name = "Vadim Goncharov",email = "psinahoi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)"
]
license = "MIT"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^1.1.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
autoflake = "^2.3.1"

[tool.mypy]
disallow_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
module = "app.db.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "alembic.*",
    "sqlalchemy.*",
    "asyncpg.*"
]
ignore_missing_imports = true

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
src_paths = ["app", "tests"]
multi_line_output = 3
include_trailing_comma = true
line_length = 120
force_grid_wrap = 0
combine_as_imports = true
float_to_top = true
